# nov-dependency-resolver

./: .gitignore  CLAUDE.md  Makefile  contracts.py  probes.py  pyproject.toml  registry.py  resolver.py  server.py  telemetry.py
.claude-plugin/: plugin.json
.playwright-mcp/: page-2026-04-03T22-00-18-995Z.yml
docs/: capability-contracts.md
skills/config/: SKILL.md
skills/install/: SKILL.md
skills/setup/: SKILL.md
skills/uninstall/: SKILL.md
tests/: conftest.py  test_contracts.py  test_manifest.py  test_marketplace.py  test_probes.py  test_registry.py  test_resolver.py
