[project]
name = "nov-hub"
version = "1.0.0"
description = "Plugin dependency resolver for Claude Code"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Thatcher"}]
dependencies = [
    "mcp[cli]",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
